--- a/Langchain/requirements.txt
+++ b/Langchain/requirements.txt
@@ -1,9 +1,38 @@
 langchain
-ipykernel
+langchain_community
+openai
+langchain
 python-dotenv
-language_community
-pypdf
-bs4
-arxiv
-pymupdf
+streamlit
+ipykernel
+langchain_core
+fastapi
+uvicorn
+langchain-openai
+langchain_groq
+langserve
+chromadb
+langchain_huggingface
+duckdb
+langchain_chroma
+langchain-text-splitters
 wikipedia
+faiss-cpu
+sentence_transformers
+pandas
+pypdf
+arxiv
+wikipedia
+duckduckgo-search
+mysql-connector-python
+sqlalchemy
+pathlib
+validators==0.28.1
+youtube_transcript_api
+unstructured
+pytube
+numexpr
+huggingface_hub
+sentence-transformers
+langchain
+gradio
